--- a/windows/puttygen.rc
+++ b/windows/puttygen.rc
@@ -37,11 +37,18 @@ BEGIN
 END
 
 /* No accelerators used */
-814 DIALOG DISCARDABLE 50, 50, 326, 231
+214 DIALOG DISCARDABLE 50, 50, 326, 231
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "PuTTY Licence"
 FONT 8, "MS Shell Dlg"
 BEGIN
-    DEFPUSHBUTTON "OK", IDOK, 98, 251, 44, 14
+    DEFPUSHBUTTON "OK", IDOK, 148, 211, 44, 14
+
     EDITTEXT 1000, 10, 10, 306, 192, ES_READONLY | ES_MULTILINE | ES_LEFT, WS_EX_STATICEDGE
 END
+
+#include "version.rc2"
+
+#ifndef NO_MANIFESTS
+1 RT_MANIFEST "puttygen.mft"
+#endif /* NO_MANIFESTS */
